Long Chat Css Styling

--- a/AngularClient/src/app/chat/message-bubble/message-bubble.component.scss
+++ b/AngularClient/src/app/chat/message-bubble/message-bubble.component.scss
@@ -31,6 +31,7 @@ $warn: mat-color($app-warn);
   &__picture {
     display: block;
     max-width: 100%;
+    background-color: white;
   }
 
   &__container {
