--- a/AngularClient/src/app/chat/chat-detail/chat-detail.component.scss
+++ b/AngularClient/src/app/chat/chat-detail/chat-detail.component.scss
@@ -15,25 +15,25 @@ $accent: mat-color($app-accent, A100);
 }
 
 .messages-list-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+
+  justify-content: flex-start;
   background-color: $accent;
   background-image: url("https://cdn.hipwallpaper.com/i/60/39/9vsJ5D.png");
+  background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
 .scrollable {
-  max-height: 100%;
-  overflow: auto;
+  position: relative;
   padding: 16px;
 }
 
 .message-send {
-  display: flex;
-  flex-direction: row;
-  padding: 8px 16px 0;
+ position: absolute;
+ bottom: 0;
+ background-color: white;
+ width: 100%;
+ height: 12%;
 }
 
 .bubble {
