--- a/AngularClient/src/app/chat-tab/chat-tab/chat-tab.component.scss
+++ b/AngularClient/src/app/chat-tab/chat-tab/chat-tab.component.scss
@@ -6,6 +6,8 @@
   overflow: visible !important;
 }
 
+
+
 .sidebar {
   &--message {
     width: 100%;
@@ -21,6 +23,7 @@
     flex-direction: column;
     flex: 1;
     z-index: 9999;
+    overflow: hidden;
   }
 }
 
