--- a/AngularClient/src/app/chat/chat-detail/chat-detail.component.html
+++ b/AngularClient/src/app/chat/chat-detail/chat-detail.component.html
@@ -11,10 +11,18 @@
       </div>
     </div>
   </div>
+  <mat-icon>mode_edit</mat-icon>
   <div class="message-send mat-elevation-z8">
     <mat-form-field class="full-width">
-      <input type="text" matInput placeholder="Write a message" (keypress)="saveMessage($event)">
+      <input [(ngModel)]="text" type="text" matInput placeholder="Write a message" (keypress)="saveMessage($event)">
       <mat-icon matSuffix>mode_edit</mat-icon>
     </mat-form-field>
+    <mat-icon matSuffix (click)="showEmoji =!showEmoji">sentiment_satisfied_alt</mat-icon>
+    <div *ngIf="showEmoji">
+      <button *ngFor="let emoji of emojis" (click)="addToText(emoji,$event)" >{{emoji}}</button>
+    </div>
   </div>
+
+
+
 </div>
