--- a/AngularClient/src/app/chat/chat-item/chat-item.component.html
+++ b/AngularClient/src/app/chat/chat-item/chat-item.component.html
@@ -1,7 +1,7 @@
 <mat-list-item (click)="showMessageDetail()">
   <img alt="" matListAvatar [src]="chat.cover">
   <h4 mat-line>{{chat.username}}</h4>
-  <p mat-line class="last-message"> {{chat.lastMessage}} </p>
+  <p mat-line class="last-message"> {{ trim(chat.lastMessage,100)}} </p>
   <span *ngIf="chat.lastMessageLength" [matBadge]="chat.lastMessageLength" matBadgeOverlap="false"
         matBadgePosition="above before" matBadgeColor="warn"></span>
 </mat-list-item>
