--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,17 +3,14 @@
     <mat-nav-list>
       <a mat-list-item>
         <mat-icon mat-list-icon>sms</mat-icon>
-        <span mat-line translate>Group Chat feature !?</span>
+        <span mat-line>Group Chat feature !?</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
 
   <div>
     <mat-toolbar style="background-color: #075e54">
-      <button mat-icon-button (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-      <span>Typescript Chat</span>
+      <span>ChrisChat</span>
     </mat-toolbar>
 
     <div class="app-content">
