--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -15,7 +15,7 @@
 
 .chat-input {
     padding-top: 20px;
-    width: 80%;
+    width: 100%;
 }
 
 .chat-list {
@@ -53,6 +53,20 @@ mat-list-item{
     margin-bottom: 2px;
     border-radius: 5px;
     background-color: #E8EAF6;
+    height: fit-content;
+
+    /*Stuff to make the text goes into multiple lines*/
+
+        /* Schlüsselwortwerte */
+    word-break: normal;
+    word-break: break-all;
+    word-break: keep-all;
+
+    /* Globale Werte */
+    word-break: inherit;
+    word-break: initial;
+    word-break: unset;
+
 }
 
 .me{
@@ -62,6 +76,12 @@ mat-list-item{
 .you{
   margin-left: 0%;
   width: 50%;
+}
+
+.action{
+  margin: 0px 25%;
+  width: 50%;
+  margin-bottom: 5px;
 }
 
 .main-card {
