--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -48,40 +48,35 @@ div#emojiKeyboard{
   max-width: 2vw;
 }
 
+
 mat-list-item{
     margin-top: 2px;
     margin-bottom: 2px;
     border-radius: 5px;
     background-color: #E8EAF6;
     height: fit-content;
-
-    /*Stuff to make the text goes into multiple lines*/
-
-        /* Schlüsselwortwerte */
-    word-break: normal;
-    word-break: break-all;
-    word-break: keep-all;
-
-    /* Globale Werte */
-    word-break: inherit;
-    word-break: initial;
-    word-break: unset;
-
-}
+    min-width: 10vw;
+    display: block;
+    width: 100%;
+  }
 
 .me{
   margin-left: 50%;
+  float: right;
+  width: fit-content;
   background-color: #25d366;
 }
 .you{
-  margin-left: 0%;
-  width: 50%;
+  margin-right: 50%;
+  float: left;
+  width: fit-content;
 }
 
 .action{
-  margin: 0px 25%;
+  float:inline-start;
+  margin: 4px 25%;
   width: 50%;
-  margin-bottom: 5px;
+
 }
 
 .main-card {
