--- a/client/src/app/chat/dialog-user/dialog-user.component.html
+++ b/client/src/app/chat/dialog-user/dialog-user.component.html
@@ -7,7 +7,7 @@
     <input matInput name="username" placeholder="{{'Username'}}"
           (keyup.enter)="onSave()" [formControl]="usernameFormControl" required>
     <mat-error >Field Required</mat-error>
-    <mat-hint >Please type your username</mat-hint>
+    <mat-hint >Choose your Name</mat-hint>
   </mat-form-field>
 </mat-dialog-content>
 <br>
