--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -55,9 +55,9 @@ div#emojiKeyboard{
 iframe{
   border: 0px;
   overflow:hidden;
-  height:100%;
+  height:80%;
+  margin: 10% 0px;
   width:100%;
-  margin-bottom: 12px;
 }
 body{
   overflow-y: hidden;
@@ -156,4 +156,35 @@ div#time{
 }
 
 
-/*********Some copy paste html for the speech bubbles**********/
+#toolbar-right{
+  position: absolute;
+  right: 1%;
+}
+
+#toolbarButton{
+  background-color: #00aabb;
+  border: 0px;
+}
+
+#toolbarButton {
+  display: inline-block;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 2px #999;
+  margin-left:10px ;
+}
+
+#toolbarButton:hover {background-color: #3e8e41}
+
+#toolbarButton:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
