WIP Canvas Drawing

--- a/client/src/app/chat/dialog-canvas/dialog-canvas.component.html
+++ b/client/src/app/chat/dialog-canvas/dialog-canvas.component.html
@@ -10,4 +10,5 @@
 <button id=colorButton [style.background]="'orange'" (click)="setColor('orange')"></button>
 <button id=colorButton [style.background]="'pink'" (click)="setColor('pink')"></button>
 <button id=colorButton [style.background]="'indigo'" (click)="setColor('indigo')"></button>
-<button id=colorButton [style.background]="'gray'" (click)="setColor('gray')"></button>
+<button id=colorButton [style.background]="'gray'" (click)="setColor('gray')"></button><br>
+<button (click)="onSave()">Send Drawing</button>
